--- a/plugin.yml
+++ b/plugin.yml
@@ -1,9 +1,9 @@
 name: NPGuys
-version: 1.0 BETA
+version: 1.0.0 BETA
 author: Goldob
 main: pl.ragecraft.npguys.NPGuys
 depend: [Citizens]
-softdepend: [Vault, Quester, RPG Items]
+softdepend: [Vault, Quests, Quester, RPG Items]
 
 commands:
   npguy:
