--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: NPGuys
-version: "1.1.1 BETA (Dev #3)"
+version: "1.1.1 BETA"
 author: Goldob
 main: pl.ragecraft.npguys.NPGuys
 depend: [Citizens]
