UI system exception handling

--- a/config.yml
+++ b/config.yml
@@ -11,6 +11,8 @@ ui:
     scoreboard:
       headline: "Your answer"
       use-scrollback: false
+    boss_healthbar:
+      use-scrollback: false
 dialogues:
   default:
     shortcut: "default"
