--- a/plugin.yml
+++ b/plugin.yml
@@ -3,7 +3,7 @@ version: "1.3.0 BETA (Dev build)"
 author: Goldob
 main: pl.ragecraft.npguys.NPGuys
 depend: [Citizens]
-softdepend: [Vault, Quests, Quester, Heroes]
+softdepend: [Vault, Quests, Quester, Heroes, BarAPI]
 
 commands:
   npguy:
