--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: NPGuys
-version: "1.3.0 BETA"
+version: "1.4.0 BETA (Dev build)"
 author: Goldob
 main: pl.ragecraft.npguys.NPGuys
 depend: [Citizens]
@@ -7,13 +7,17 @@ softdepend: [Vault, Quests, Quester, Heroes, BarAPI]
 
 commands:
   npguy:
-    description: "Dialogues management commands"
+    description: "NPGuy management commands"
     aliases: [npg]
-    permission: npguys.manage.commands
+    permission: npguys.manage
+    ussage: "Unknown command! Type /npguy for command list!"
+  dialogue:
+    description: "Dialogue management commands"
+    permission: npguys.manage
     ussage: "Unknown command! Type /npguy for command list!"
   npguys:
     description: "Plugin management commands"
-    permission: npguys.manage.commands
+    permission: npguys.manage
 
 permissions:
   npguys.*:
@@ -27,12 +31,6 @@ permissions:
       npguys.manage.dialogues: true
       npguys.manage.npc: true
       npguys.manage.commands: true
-  npguys.manage.npc:
-    description: "Gives access to NPGuy's management commands"
-    default: op
-  npguys.manage.commands:
+  npguys.manage:
     description: "You need this to perform any NPGuys commands"
-    default: op
-  npguys.manage.dialogues:
-    description: "Gives access to dialogues management commands"
     default: op
