--- a/build.gradle
+++ b/build.gradle
@@ -11,3 +11,10 @@ dependencies {
     compile 'org.bukkit:bukkit:1.12.2-R0.1-SNAPSHOT'
     compile fileTree('libs')
 }
+
+task copyLicense(type: Copy) {
+    from "LICENSE.md"
+    into "$buildDir/resources/main"
+}
+
+jar.dependsOn copyLicense
